# fcitx5-harmony

./: .gitignore  .gitmodules  build-profile.json5  code-linter.json5
.github/workflows/: ci.yml  compare.yml
AppScope/: app.json5
AppScope/resources/base/element/: string.json
AppScope/resources/base/media/: app_icon.json
cache/: README.md
entry/: hvigorfile.ts  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  napihelper.h
entry/src/main/cpp/cmake/: Fcitx5UtilsConfig.cmake  FindFcitx5ModuleLuaAddonLoader.cmake  FindFcitx5Utils.cmake
entry/src/main/cpp/harmonyfrontend/: CMakeLists.txt  harmonyfrontend.conf.in.in  harmonyfrontend.cpp  harmonyfrontend.h
entry/src/main/cpp/src/: CMakeLists.txt  fcitx.cpp  fcitx.h  inputmethod.cpp  inputmethod.h  keycode.cpp  keycode.h  nativestreambuf.h  ohkeycode.h  util.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/cpp/webkeyboard/: CMakeLists.txt  utility.h  webkeyboard.cpp  webkeyboard.h
entry/src/main/ets/InputMethodExtensionAbility/: FcitxInputMethodService.ets  FcitxInputMethodService.ts
entry/src/main/ets/InputMethodExtensionAbility/model/: FcitxEvent.ets  FcitxEvent.ts  KeyState.ets  KeyboardController.ets  KeyboardController.ts  TextOperation.ets  TextOperation.ts  keycode.ets  keycode.ts
entry/src/main/ets/InputMethodExtensionAbility/model/pasteboard/: PasteboardController.ets  PasteboardDao.ets  PasteboardDatabase.ets  PasteboardEntry.ets
entry/src/main/ets/InputMethodExtensionAbility/pages/: Index.ets  VirtualKeyboard.ets  keycode.ts
entry/src/main/ets/InputMethodExtensionAbility/pages/keyboard/: KeyType.ts  LayoutData.ts
entry/src/main/ets/ability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/utils/: PermissionUtil.ets  StrUtil.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
patches/: chinese-addons.patch  fcitx5.patch  libime.patch
scripts/: format.sh  install-deps.sh  lint.sh  postbuild.mjs
